--- a/MEAN-Posts/client/src/app/posts/post-create/post-create.component.css
+++ b/MEAN-Posts/client/src/app/posts/post-create/post-create.component.css
@@ -1,7 +1,28 @@
 mat-card {
   margin-top: 2rem;
 }
+
+mat-form-field {
+  margin-bottom: 1em;
+}
 mat-form-field,
 textarea {
   width: 100%;
+}
+
+mat-spinner {
+  margin: auto;
+}
+
+.file-input {
+  visibility: hidden;
+}
+
+.image-preview {
+  height: 5rem;
+  margin: 1rem 0;
+}
+
+.image-preview img {
+  height: 100%;
 }
