--- a/MEAN-Posts/client/src/app/posts/post-create/post-create.component.html
+++ b/MEAN-Posts/client/src/app/posts/post-create/post-create.component.html
@@ -1,29 +1,37 @@
 <mat-card>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field appearance="fill">
       <mat-label>Post Title</mat-label>
-      <input
-        matInput
-        name="title"
-        [ngModel]="post?.title"
-        type="text"
-        required
-        #title="ngModel"
-      />
-      <mat-error *ngIf="title.invalid">Title can not be empty!</mat-error>
+      <input matInput type="text" formControlName="title" />
+      <mat-error *ngIf="form.get('title').invalid"
+        >Please, enter a post title min 3 chars.</mat-error
+      >
     </mat-form-field>
+    <div style="margin-bottom: 1em">
+      <button (click)="filePicker.click()" mat-stroked-button type="button">
+        Pick Image
+      </button>
+      <input
+        type="file"
+        class="file-input"
+        #filePicker
+        (change)="onImagePicked($event)"
+      />
+    </div>
+    <div
+      class="image-preview"
+      *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid"
+    >
+      <img [src]="imagePreview" [alt]="form.value.title" />
+    </div>
     <mat-form-field appearance="fill">
       <mat-label>Post Content</mat-label>
-      <textarea
-        matInput
-        name="content"
-        [ngModel]="post?.content"
-        rows="6"
-        required
-        #content="ngModel"
-      ></textarea>
-      <button color="accent" mat-raised-button type="submit">Save Post</button>
-      <mat-error *ngIf="content.invalid">Content can not be empty!</mat-error>
+      <textarea matInput rows="6" formControlName="content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid"
+        >Please enter post content!</mat-error
+      >
     </mat-form-field>
+    <button color="accent" mat-raised-button type="submit">Save Post</button>
   </form>
 </mat-card>
