--- a/MEAN-Posts/client/src/app/posts/post-list/post-list.component.html
+++ b/MEAN-Posts/client/src/app/posts/post-list/post-list.component.html
@@ -17,3 +17,10 @@
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">
   No posts added yet!
 </p>
+<mat-paginator
+  [pageSize]="postsPerPage"
+  [length]="totalPosts"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="onPageChange($event)"
+  *ngIf="posts.length > 0"
+></mat-paginator>
