--- a/MEAN-Posts/client/src/app/header/header.component.html
+++ b/MEAN-Posts/client/src/app/header/header.component.html
@@ -2,10 +2,21 @@
   <a routerLink=""><span>My Messages</span></a>
   <span class="spacer"></span>
   <ul>
-    <li>
+    <li *ngIf="isAuthenticated">
       <a mat-button routerLink="create" routerLinkActive="mat-accent"
         >New Post</a
       >
+    </li>
+    <li *ngIf="!isAuthenticated">
+      <a mat-button routerLink="login" routerLinkActive="mat-accent">Login</a>
+    </li>
+    <li *ngIf="!isAuthenticated">
+      <a mat-button routerLink="signup" routerLinkActive="mat-accent"
+        >Sign up</a
+      >
+    </li>
+    <li *ngIf="isAuthenticated">
+      <button mat-button (click)="onLogout()">Logout</button>
     </li>
   </ul>
 </mat-toolbar>
