--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+      >Dating App</a
+    >
     <button
       class="navbar-toggler"
       type="button"
@@ -17,29 +19,47 @@
       id="navbarCollapse"
       style="justify-content: flex-end"
     >
-      <ul
-        class="navbar-nav me-auto mb-2 mb-md-0"
-        *ngIf="accountSerivce.currentUser$ | async"
-      >
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <ng-container *ngIf="accountSerivce.currentUser$ | async">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              aria-current="page"
+              routerLink="/members"
+              routerLinkActive="active"
+              >Matches</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+              >Lists</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+              >Messages</a
+            >
+          </li>
+        </ng-container>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
+          <a class="nav-link" routerLink="/errors" routerLinkActive="active"
+            >Errors</a
+          >
         </li>
       </ul>
-
       <div
         class="dropdown"
-        *ngIf="accountSerivce.currentUser$ | async"
+        *ngIf="accountSerivce.currentUser$ | async as user"
         dropdown
       >
-        <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+        <a
+          class="dropdown-toggle text-light"
+          dropdownToggle
+          style="text-decoration: none"
+          >Welcome, {{ user.username | titlecase }}</a
+        >
         <div class="dropdown-menu mt-3" *dropdownMenu>
-          <div class="dropdown-item">Edit Profile</div>
+          <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
           <div class="dropdown-divider"></div>
           <div class="dropdown-item" (click)="logout()">Logout</div>
         </div>
@@ -65,7 +85,7 @@
           type="password"
           placeholder="Password"
         />
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
     </div>
   </div>
