--- a/DatingApp/client/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp/client/src/app/members/member-edit/member-edit.component.html
@@ -94,7 +94,7 @@
         </form>
       </tab>
       <tab heading="Edit photos">
-        <p>phot edit go here</p>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
