--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -52,7 +52,10 @@
         *ngIf="accountSerivce.currentUser$ | async as user"
         dropdown
       >
-        <img src="{{ user.photoUrl }}" alt="{{ user.username }}" />
+        <img
+          src="{{ user.photoUrl || './assets/user.png' }}"
+          alt="{{ user.username }}"
+        />
         <a
           class="dropdown-toggle text-light ml-2"
           dropdownToggle
