--- a/clips/src/app/user/register/register.component.html
+++ b/clips/src/app/user/register/register.component.html
@@ -2,41 +2,7 @@
   <!-- Name -->
   <div class="mb-3">
     <label class="inline-block mb-2">Name</label>
-    <input
-      formControlName="name"
-      type="text"
-      class="
-        block
-        w-full
-        py-1.5
-        px-3
-        text-gray-200
-        border border-gray-400
-        transition
-        duration-500
-        focus:outline-none
-        rounded
-        bg-transparent
-        focus:border-indigo-400
-      "
-      placeholder="Enter Name"
-    />
-    <p
-      class="text-red-400"
-      *ngIf="registerForm.controls['name'].touched && registerForm.controls['name'].dirty && registerForm.controls['name'].errors?.['required']"
-    >
-      Field is required!
-    </p>
-    <p
-      class="text-red-400"
-      *ngIf="registerForm.controls['name'].touched && registerForm.controls['name'].dirty && registerForm.controls['name'].errors?.['minlength']"
-    >
-      The value is
-      {{registerForm.controls['name'].errors?.['minlength'].actualLength}}
-      characters long! It must be at least
-      {{registerForm.controls['name'].errors?.['minlength'].requiredLength}}
-      long.
-    </p>
+    <app-input [control]="name"></app-input>
   </div>
   <!-- Email -->
   <div class="mb-3">
@@ -44,20 +10,7 @@
     <input
       formControlName="email"
       type="email"
-      class="
-        block
-        w-full
-        py-1.5
-        px-3
-        text-gray-200
-        border border-gray-400
-        transition
-        duration-500
-        focus:outline-none
-        rounded
-        bg-transparent
-        focus:border-indigo-400
-      "
+      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Enter Email"
     />
   </div>
@@ -67,20 +20,7 @@
     <input
       formControlName="age"
       type="number"
-      class="
-        block
-        w-full
-        py-1.5
-        px-3
-        text-gray-200
-        border border-gray-400
-        transition
-        duration-500
-        focus:outline-none
-        rounded
-        bg-transparent
-        focus:border-indigo-400
-      "
+      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
     />
   </div>
   <!-- Password -->
@@ -89,20 +29,7 @@
     <input
       formControlName="password"
       type="password"
-      class="
-        block
-        w-full
-        py-1.5
-        px-3
-        text-gray-200
-        border border-gray-400
-        transition
-        duration-500
-        focus:outline-none
-        rounded
-        bg-transparent
-        focus:border-indigo-400
-      "
+      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Password"
     />
   </div>
@@ -111,20 +38,7 @@
     <label class="inline-block mb-2">Confirm Password</label>
     <input
       type="password"
-      class="
-        block
-        w-full
-        py-1.5
-        px-3
-        text-gray-200
-        border border-gray-400
-        transition
-        duration-500
-        focus:outline-none
-        rounded
-        bg-transparent
-        focus:border-indigo-400
-      "
+      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Confirm Password"
     />
   </div>
@@ -134,36 +48,13 @@
     <input
       formControlName="phoneNumber"
       type="text"
-      class="
-        block
-        w-full
-        py-1.5
-        px-3
-        text-gray-200
-        border border-gray-400
-        transition
-        duration-500
-        focus:outline-none
-        rounded
-        bg-transparent
-        focus:border-indigo-400
-      "
+      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Enter Phone Number"
     />
   </div>
   <button
     type="submit"
-    class="
-      block
-      w-full
-      bg-indigo-400
-      text-white
-      py-1.5
-      px-3
-      rounded
-      transition
-      hover:bg-indigo-500
-    "
+    class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500"
   >
     Submit
   </button>
