--- a/clips/src/app/user/register/register.component.html
+++ b/clips/src/app/user/register/register.component.html
@@ -16,30 +16,29 @@
   <!-- Age -->
   <div class="mb-3">
     <label class="inline-block mb-2">Age</label>
-    <input
-      formControlName="age"
+    <app-input
+      [control]="age"
+      placeholder="Enter Age"
       type="number"
-      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-    />
+    ></app-input>
   </div>
   <!-- Password -->
   <div class="mb-3">
     <label class="inline-block mb-2">Password</label>
-    <input
-      formControlName="password"
+    <app-input
+      [control]="password"
+      placeholder="Enter password"
       type="password"
-      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="Password"
-    />
+    ></app-input>
   </div>
   <!-- Confirm Password -->
   <div class="mb-3">
     <label class="inline-block mb-2">Confirm Password</label>
-    <input
-      type="password"
-      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+    <app-input
+      [control]="confirmPassword"
       placeholder="Confirm Password"
-    />
+      type="password"
+    ></app-input>
   </div>
   <!-- Phone Number -->
   <div class="mb-3">
