--- a/clips/src/app/user/login/login.component.html
+++ b/clips/src/app/user/login/login.component.html
@@ -1,4 +1,4 @@
-<form #loginFrom="ngForm">
+<form #loginFrom="ngForm" (ngSubmit)="login(loginFrom)">
   <!-- Email -->
   <div class="mb-3">
     <label class="inline-block mb-2">Email</label>
@@ -6,7 +6,7 @@
       #email="ngModel"
       type="email"
       name="email"
-      [(ngModel)]="credentials.email"
+      ngModel
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Enter Email"
       required
@@ -26,7 +26,7 @@
       #password="ngModel"
       type="password"
       name="password"
-      [(ngModel)]="credentials.password"
+      ngModel
       class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
       placeholder="Password"
       required
@@ -41,8 +41,9 @@
     </p>
   </div>
   <button
+    [disabled]="loginFrom.invalid"
     type="submit"
-    class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500"
+    class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
   >
     Submit
   </button>
