Components and routing

--- a/angularfiebase-authentication/src/app/app.component.html
+++ b/angularfiebase-authentication/src/app/app.component.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-primary">Primary</button>
+<a class="btn btn-outline-info" routerLink="auth/sign-in">Login</a>
+
+<router-outlet></router-outlet>
