--- a/NgFireDemo/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/NgFireDemo/src/app/features/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,6 @@
-<h1>Login</h1>
+<div class="form-container">
+  <h1>Login</h1>
+  <h5>Sign in with your email</h5>
+  <app-login-form (formData)="login($event)"></app-login-form>
+</div>
+view raw
