--- a/NgFireDemo/src/app/features/dashboard/dashboard.component.html
+++ b/NgFireDemo/src/app/features/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar></mat-toolbar>
+<mat-toolbar><a (click)="logout()">Log out</a></mat-toolbar>
 <div class="background">
   <h1>Dashboard</h1>
 
