--- a/clips/src/app/nav/nav.component.html
+++ b/clips/src/app/nav/nav.component.html
@@ -11,20 +11,27 @@
       <!-- Primary Navigation -->
       <ul class="flex flex-row mt-1">
         <!-- Navigation Links -->
-        <li>
+        <li
+          *ngIf="
+            !(authService.isAuthenticated$ | async);
+            else authenticatedLinks
+          "
+        >
           <a class="px-2" (click)="openModal($event)" href=""
             >Login / Register</a
           >
         </li>
-        <li>
-          <a class="px-2" href="#">Manage</a>
-        </li>
-        <li>
-          <a class="px-2" href="#">Upload</a>
-        </li>
-        <li>
-          <a class="px-2" href="about.html">About</a>
-        </li>
+        <ng-template #authenticatedLinks>
+          <li>
+            <a class="px-2" href="#">Manage</a>
+          </li>
+          <li>
+            <a class="px-2" href="#">Upload</a>
+          </li>
+          <li>
+            <a class="px-2" href="about.html">About</a>
+          </li>
+        </ng-template>
       </ul>
       <!-- Language Switcher -->
       <ul class="flex flex-row ml-auto">
