--- a/clips/src/app/user/login/login.component.html
+++ b/clips/src/app/user/login/login.component.html
@@ -1,3 +1,7 @@
+<app-alert *ngIf="showAlert" [color]="alertColor">
+  {{ alertMsg }}
+</app-alert>
+
 <form #loginFrom="ngForm" (ngSubmit)="login(loginFrom)">
   <!-- Email -->
   <div class="mb-3">
@@ -41,7 +45,7 @@
     </p>
   </div>
   <button
-    [disabled]="loginFrom.invalid"
+    [disabled]="loginFrom.invalid || inSubmission"
     type="submit"
     class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
   >
