Closing modal with delay

--- a/clips/src/app/app.component.html
+++ b/clips/src/app/app.component.html
@@ -33,17 +33,7 @@
 <!-- Main Content -->
 <section class="container mx-auto">
   <h1
-    class="
-      uppercase
-      text-center text-4xl
-      grid
-      mt-20
-      mb-12
-      items-center
-      gap-8
-      tracking-widest
-      latest
-    "
+    class="uppercase text-center text-4xl grid mt-20 mb-12 items-center gap-8 tracking-widest latest"
   >
     Latest
   </h1>
@@ -52,16 +42,7 @@
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
     <a
       href="#"
-      class="
-        mt-6
-        rounded-tl-2xl rounded-br-2xl
-        shadow-xl
-        bg-secondary
-        transform
-        hover:-translate-y-2 hover:shadow-2xl
-        transition
-        duration-300
-      "
+      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
       <!-- Image -->
       <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/1.jpg" />
@@ -69,14 +50,7 @@
       <!-- Shape -->
       <div class="relative">
         <div
-          class="
-            absolute
-            pointer-events-none
-            bottom-full
-            w-full
-            bg-secondary
-            text-white
-          "
+          class="absolute pointer-events-none bottom-full w-full bg-secondary text-white"
         >
           <div class="absolute bottom-full w-full pb-5 overflow-hidden">
             <svg
@@ -105,16 +79,7 @@
     </a>
     <a
       href="#"
-      class="
-        mt-6
-        rounded-tl-2xl rounded-br-2xl
-        shadow-xl
-        bg-secondary
-        transform
-        hover:-translate-y-2 hover:shadow-2xl
-        transition
-        duration-300
-      "
+      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
       <!-- Image -->
       <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/2.jpg" />
@@ -122,14 +87,7 @@
       <!-- Shape -->
       <div class="relative">
         <div
-          class="
-            absolute
-            pointer-events-none
-            bottom-full
-            w-full
-            bg-secondary
-            text-white
-          "
+          class="absolute pointer-events-none bottom-full w-full bg-secondary text-white"
         >
           <div class="absolute bottom-full w-full pb-5 overflow-hidden">
             <svg
@@ -158,16 +116,7 @@
     </a>
     <a
       href="#"
-      class="
-        mt-6
-        rounded-tl-2xl rounded-br-2xl
-        shadow-xl
-        bg-secondary
-        transform
-        hover:-translate-y-2 hover:shadow-2xl
-        transition
-        duration-300
-      "
+      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
       <!-- Image -->
       <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/3.jpg" />
@@ -175,14 +124,7 @@
       <!-- Shape -->
       <div class="relative">
         <div
-          class="
-            absolute
-            pointer-events-none
-            bottom-full
-            w-full
-            bg-secondary
-            text-white
-          "
+          class="absolute pointer-events-none bottom-full w-full bg-secondary text-white"
         >
           <div class="absolute bottom-full w-full pb-5 overflow-hidden">
             <svg
@@ -211,16 +153,7 @@
     </a>
     <a
       href="#"
-      class="
-        mt-6
-        rounded-tl-2xl rounded-br-2xl
-        shadow-xl
-        bg-secondary
-        transform
-        hover:-translate-y-2 hover:shadow-2xl
-        transition
-        duration-300
-      "
+      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
       <!-- Image -->
       <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/2.jpg" />
@@ -228,14 +161,7 @@
       <!-- Shape -->
       <div class="relative">
         <div
-          class="
-            absolute
-            pointer-events-none
-            bottom-full
-            w-full
-            bg-secondary
-            text-white
-          "
+          class="absolute pointer-events-none bottom-full w-full bg-secondary text-white"
         >
           <div class="absolute bottom-full w-full pb-5 overflow-hidden">
             <svg
@@ -264,16 +190,7 @@
     </a>
     <a
       href="#"
-      class="
-        mt-6
-        rounded-tl-2xl rounded-br-2xl
-        shadow-xl
-        bg-secondary
-        transform
-        hover:-translate-y-2 hover:shadow-2xl
-        transition
-        duration-300
-      "
+      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
       <!-- Image -->
       <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/3.jpg" />
@@ -281,14 +198,7 @@
       <!-- Shape -->
       <div class="relative">
         <div
-          class="
-            absolute
-            pointer-events-none
-            bottom-full
-            w-full
-            bg-secondary
-            text-white
-          "
+          class="absolute pointer-events-none bottom-full w-full bg-secondary text-white"
         >
           <div class="absolute bottom-full w-full pb-5 overflow-hidden">
             <svg
@@ -317,16 +227,7 @@
     </a>
     <a
       href="#"
-      class="
-        mt-6
-        rounded-tl-2xl rounded-br-2xl
-        shadow-xl
-        bg-secondary
-        transform
-        hover:-translate-y-2 hover:shadow-2xl
-        transition
-        duration-300
-      "
+      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
     >
       <!-- Image -->
       <img class="card-img-top rounded-tl-2xl w-full" src="assets/img/1.jpg" />
@@ -334,14 +235,7 @@
       <!-- Shape -->
       <div class="relative">
         <div
-          class="
-            absolute
-            pointer-events-none
-            bottom-full
-            w-full
-            bg-secondary
-            text-white
-          "
+          class="absolute pointer-events-none bottom-full w-full bg-secondary text-white"
         >
           <div class="absolute bottom-full w-full pb-5 overflow-hidden">
             <svg
@@ -372,4 +266,6 @@
 </section>
 
 <!-- Auth Modal -->
-<app-auth-modal></app-auth-modal>
+<app-auth-modal
+  *ngIf="!(authService.delayedIsAuthenticated$ | async)"
+></app-auth-modal>
