--- a/clips/src/app/nav/nav.component.html
+++ b/clips/src/app/nav/nav.component.html
@@ -31,6 +31,9 @@
           <li>
             <a class="px-2" href="about.html">About</a>
           </li>
+          <li class="cursor-pointer">
+            <a class="px-2" (click)="logout($event)">Logout</a>
+          </li>
         </ng-template>
       </ul>
       <!-- Language Switcher -->
