--- a/max-material-fitness-tracker/src/app/app.component.html
+++ b/max-material-fitness-tracker/src/app/app.component.html
@@ -1,5 +1,4 @@
-<button mat-raised-button>Basic</button>
-<button mat-raised-button color="primary">Primary</button>
-<button mat-raised-button color="accent">Accent</button>
-<button mat-raised-button color="warn">Warn</button>
-<button mat-raised-button disabled>Disabled</button>
+<button mat-icon-button color="primary">
+  <mat-icon>more_vert</mat-icon>
+  Click Me
+</button>
