--- a/max-material-fitness-tracker/src/app/auth/signup/signup.component.html
+++ b/max-material-fitness-tracker/src/app/auth/signup/signup.component.html
@@ -12,19 +12,41 @@
         placeholder="Your Email"
         ngModel
         name="email"
+        email
+        required
+        #emailInput="ngModel"
       />
+      <mat-error *ngIf="emailInput.hasError('required')"
+        >Field must not be empty</mat-error
+      >
+      <mat-error *ngIf="emailInput.hasError('email')"
+        >Email is invalid</mat-error
+      >
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field hintLabel="Should be at least 6 characters long">
       <input
         matInput
         type="passport"
         placeholder="Your Passport"
         ngModel
         name="password"
+        required
+        minlength="6"
+        #passwordInput="ngModel"
       />
-      <mat-hint>Your passport should be min 8 characters.</mat-hint>
+      <mat-hint align="end">{{ passwordInput.value?.length }} /6</mat-hint>
+      <mat-error *ngIf="passwordInput.hasError('required')"
+        >Field must not be empty</mat-error
+      >
+      <mat-error *ngIf="passwordInput.hasError('minlength')"
+        >Should be min 6 characters long</mat-error
+      >
     </mat-form-field>
-
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" placeholder="Select Date" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Submit</button>
   </form>
 </section>
