--- a/clips/src/app/nav/nav.component.html
+++ b/clips/src/app/nav/nav.component.html
@@ -21,13 +21,24 @@
         </li>
         <ng-template #authenticatedLinks>
           <li>
-            <a class="px-2" href="#">Manage</a>
+            <a
+              class="px-2"
+              routerLink="/"
+              routerLinkActive="text-indigo-400"
+              [routerLinkActiveOptions]="{ exact: true }"
+              >Manage</a
+            >
           </li>
           <li>
             <a class="px-2" href="#">Upload</a>
           </li>
-          <li>
-            <a class="px-2" routerLink="/about">About</a>
+          <li routerLinkActive="text-indigo-400">
+            <a
+              class="px-2"
+              routerLink="/about"
+              routerLinkActive="text-indigo-400"
+              >About</a
+            >
           </li>
           <li class="cursor-pointer">
             <a class="px-2" (click)="logout($event)">Logout</a>
